--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/validator": "^13.11.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
-    "csurf": "^1.11.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
